# devenv

./: .gitignore  .mise.toml  .scalafmt.conf  .tool-versions  CLAUDE.md  README.md  SPEC.md  TODO.md  build.sbt  pyproject.toml  test_hook_system.py
.github/workflows/: ci.yml  release.yml
core/src/test/resources/: projectConfig.yaml  userConfig.yaml
docker/fixtures/: .gitignore
docker/fixtures/combined/.devcontainer/: devenv.yaml
docker/fixtures/docker-in-docker/: docker-compose.yaml
docs/: cleanup-plan.md  configuration.md  docker-testing.md
e2e/: run-tests.sh
e2e-tests/: README.md
e2e/generate-with-modules/.devcontainer/: devenv.yaml
generation-tests/: run-tests.sh
generation-tests/generate-with-modules/: README.md
generation-tests/generate-with-modules/.devcontainer/: devenv.yaml
generation-tests/generate-with-user-config/: README.md
generation-tests/generate-with-user-config/mock-home/.config/devenv/: devenv.yaml
generation-tests/generate-with-user-config/project/.devcontainer/: devenv.yaml
generation-tests/hello-world/: README.md
scripts/: release.sh
src/devenv/: __init__.py  __main__.py  cli.py
src/devenv/utils/: __init__.py  cli_helpers.py  config.py  devcontainer.py  docker.py  hooks.py  modules.py
test-sandbox/e2e/: run-tests.sh
test-sandbox/e2e/basic-init/: README.md
test-sandbox/e2e/generate-with-modules/.devcontainer/: devenv.yaml
test-sandbox/e2e/generate-with-user-config/: README.md
test-sandbox/hook-test/test-project/: .mise.toml
test-sandbox/hook-test/test-project/.devenv/: config.yml
test-sandbox/packaging-test/.devcontainer/: devenv.yaml
test-sandbox/test-project/.devenv/: config.yml
tests/: test_hooks.py
tests/integration/: test_config_integration.py
tests/unit/: test_config.py  test_devcontainer.py  test_modules.py
(+75 files in other folders)
